# maxmeandp

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml  test.sh
irace/: default.txt  parameters.txt  scenario.txt  target-runner
resources/hao/: MAMMDP_FV2.cpp  Makefile
resources/lai/: I.cpp  II.cpp  III.cpp  IV.cpp  MAMMDP_FV2.cpp  MMDPI.cpp  MMDPII.cpp  Makefile  generate-lai-instances.sh  generate_large_instances.sh  mammdp_fv2  mmdpi  mmdpii
src/: cpx.rs  edp_model.rs  ff.rs  greedy.rs  instance.rs  main.rs  options.rs  solution.rs  util.rs
test/: README.md  Readme.md  irace-result.txt  irace.Rdata
