[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
cplex-sys = "^0.8"
# clap = "3.0.0-beta.5"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "derive"]

[profile.dev]
opt-level = 2

[profile.release]
panic = "abort"
debug = true